# python-wipe-clean

./: .flake8  .gitignore  DEVELOPMENT.md  LICENSE  README.md  brush.py  main.py  path.py  pyproject.toml  screen.py  tox.ini
.github/workflows/: build.yml  build_doc.yml  codeql-analysis.yml
scripts/: make_doc.py  requirements.ci.txt
scripts/templates/: README.md.j2
tests/: test_cli.py  test_readme_examples.py  test_render.py  test_simple_console.py
wipe_clean/: brush.py  fun.py  main.py  path.py  renderer.py  screen.py  utils.py
wipe_clean/_rich/: __init__.py  control.py  simple_console.py
