[tool.poetry]
name = "wipe-clean"
version = "0.3.1"
description = "Clear your terminal in a ritual way. Zero dependency."
authors = ["wenoptk <wenoptics@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wenoptics/python-wipe-clean"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.6.2"
dataclasses = { version = ">=0.7,<0.9", python = "^3.6,<3.7" }

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
marko = { extras = ["toc"], version = "^1.2.0" }
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wipe-clean = "wipe_clean.main:_outer_cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wenoptics/python-wipe-clean/issues"
