[tool.poetry]
name = "wipe-clean"
version = "0.3.1"
description = "Clear your terminal in a fun way. Zero dependency."
authors = ["wenoptk <wenoptics@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wenoptics/python-wipe-clean"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^4.0.1"
marko = { extras = ["toc"], version = "^1.2.0" }
Jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wipe-clean = "wipe_clean.main:_outer_cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wenoptics/python-wipe-clean/issues"
